# game.libretro.opera

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
debian/: changelog.in  control  copyright
depends/common/4d0/: CMakeLists.txt
depends/common/4do/: 4do.txt  CMakeLists.txt
depends/common/opera/: CMakeLists.txt  opera.txt
game.libretro.4do/: addon.xml  addon.xml.in
game.libretro.4do/resources/: buttonmap.xml  settings.xml  topology.xml
game.libretro.4do/resources/language/English/: strings.po
game.libretro.4do/resources/language/resource.language.en_gb/: strings.po
game.libretro.opera/: addon.xml.in
game.libretro.opera/resources/: settings.xml
game.libretro.opera/resources/language/resource.language.af_za/: strings.po
game.libretro.opera/resources/language/resource.language.am_et/: strings.po
game.libretro.opera/resources/language/resource.language.ar_dz/: strings.po
game.libretro.opera/resources/language/resource.language.ar_sa/: strings.po
game.libretro.opera/resources/language/resource.language.ast_es/: strings.po
game.libretro.opera/resources/language/resource.language.az_az/: strings.po
game.libretro.opera/resources/language/resource.language.be_by/: strings.po
game.libretro.opera/resources/language/resource.language.bg_bg/: strings.po
game.libretro.opera/resources/language/resource.language.bs_ba/: strings.po
game.libretro.opera/resources/language/resource.language.ca_es/: strings.po
game.libretro.opera/resources/language/resource.language.cs_cz/: strings.po
(+71 files in other folders)
